--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
 }
 
 .container button{
-    background-color: #003688;
+    background-color: #512da8;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -143,10 +143,6 @@ body{
     height: 40px;
 }
 
-.social-icons i {
-    color: #001031;
-}
-
 .toggle-container{
     position: absolute;
     top: 0;
@@ -165,9 +161,9 @@ body{
 }
 
 .toggle{
-    background-color: #003688;
+    background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right, #005be4, #003688);
+    background: linear-gradient(to right, #5c6bc0, #512da8);
     color: #fff;
     position: relative;
     left: -100%;
