--- a/Tela Vendedor/style.css
+++ b/Tela Vendedor/style.css
@@ -167,3 +167,31 @@ h3 {
 .botoes .cancelar:hover {
     background-color: #cc0000;
 }
+
+/* Estilização do botão */
+#proximo {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #0056d2; /* Cor de fundo verde */
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+    font-size: 24px;
+    position: fixed;
+    bottom: 100px; /* Distância do fundo */
+    right: 100px; /* Distância do lado direito */
+}
+
+#proximo:hover {
+    background-color: #45a049; /* Cor ao passar o mouse */
+}
+
+/* Estilização do ícone dentro do botão */
+#proximo i {
+    font-size: 24px; /* Tamanho do ícone */
+    color: white; /* Cor do ícone */
+}
