--- a/Tela Chamada/style.css
+++ b/Tela Chamada/style.css
@@ -41,22 +41,18 @@ header {
     height: 100%;
 }
 
-.local span {
+.local span p {
     background-color: #005ae0;
     border-radius: 0px 0px 10px 10px;
     height: 45px;
     width: 150px;
     padding: 3px;
-}
-
-.local p {
     font-size: 2rem;
     color: white;
     font-weight: 800;
 }
 
 .local h1 {
-    margin-top: 30px;
     width: 100%;
     height: 100%;
 }
@@ -108,6 +104,14 @@ footer {
     height: 30%;
 }
 
+#nomeVendedor {
+    display: flex;
+    font-size: 90px;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+}
+
 footer h3 {
     position: absolute;
     width: 300px;
@@ -119,9 +123,6 @@ footer h3 {
     height: 40px;
 }
 
-.local span {
-    background-color: transparent;
-}
 
 .senha {
     text-align: center;
@@ -137,8 +138,8 @@ footer h3 {
 
 .card {
     display: flex;
-    height: 200px;
-    margin: 10px;
+    height: 100%;
+    margin: 0 10px;
     border: 1px solid red;
 }
 
