--- a/Chamada/style.css
+++ b/Chamada/style.css
@@ -106,13 +106,13 @@ footer {
 
 #nomeVendedor {
     display: flex;
-    font-size: 90px;
+    font-size: 4.5rem;
     align-items: center;
     justify-content: center;
     gap: 25px;
 }
 
-footer h3 {
+#titulo {
     position: absolute;
     width: 300px;
     left: 40%;
@@ -123,31 +123,30 @@ footer h3 {
     height: 40px;
 }
 
-
-.senha {
-    text-align: center;
-    width: 500px;
-    height: 140px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    text-align: center;
-}
-
 .card {
     display: flex;
-    height: 100%;
-    margin: 0 10px;
-    border: 1px solid red;
+    padding-top: 3%;
+    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+    height: 180px;
+    width: 300px;
+    margin: 0px 10px;
+}
+
+.card p {
+    color: #005ae0;
+    font-weight: 800;
+}
+
+.senha1, .senha2, .senha3, .senha4 {
+    font-size: 50px;
 }
 
 .ultimas-chamadas {
     display: flex;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
-    padding: 35px;
     text-align: center; /* Garante que o texto dentro das chamadas também esteja centralizado */
     width: 100%;
     height: 100%; /* Ajuste a altura para o layout */
