--- a/Tela Vendedor/style.css
+++ b/Tela Vendedor/style.css
@@ -1,8 +1,9 @@
+/* Estilos globais */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -13,20 +14,62 @@ main {
     padding: 20px;
 }
 
+/* Estilos do header */
 header {
     width: 100%;
     height: 40px;
     background: linear-gradient(to right, #066aff, #005ae0);
-    padding: 2px 0px;
+    padding: 2px 0;
 }
 
 header nav {
     justify-content: end;
     gap: 20px;
     display: flex;
-    margin: 0px 15px;
+    margin: 0 15px;
+    align-items: center;
 }
 
+/* Estilos do seletor de estação */
+#seletorEstacao {
+    border-radius: 5px;
+    background-color: #005ae0;
+    padding: 3px 3px;
+    font-size: 16px;
+    color: #fff;
+    border: 1px solid #fff;
+    outline: none;
+    transition: border-color 0.3s, background-color 0.3s;
+    cursor: pointer;
+}
+
+#seletorEstacao:focus {
+    border-color: #003d99;
+    background-color: #004bb5;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* Estilos do botão */
+nav button {
+    background-color: transparent;
+    box-sizing: border-box;
+    display: flex;
+    border: none;
+    align-items: center;
+    justify-content: center;
+}
+
+nav i {
+    font-size: 25px;
+    color: white;
+}
+
+/* Estilos da imagem do usuário */
 header img {
     width: 35px;
     border-radius: 50%;
@@ -34,25 +77,7 @@ header img {
     cursor: pointer;
 }
 
-nav button {
-    background-color: transparent;
-    box-sizing: border-box; /* Garante que o padding e a borda não alterem o tamanho */
-    display: flex; /* Opcional: Facilita a centralização de conteúdo interno */
-    border: none;
-    align-items: center; /* Opcional: Centraliza o conteúdo verticalmente */
-    justify-content: center; /* Opcional: Centraliza o conteúdo horizontalmente */
-}
-
-nav i {
-    font-size: 25px;
-    color:  white;
-    cursor: pointer;
-}
-
-nav i:hover {
-    color: #c9d6ff;
-}
-
+/* Estilos dos cards */
 #card-container {
     display: flex;
     gap: 10px;
@@ -62,26 +87,28 @@ nav i:hover {
     box-sizing: border-box;
     width: 300px;
     gap: 20px;
-    background-color: #fff; /* Cor de fundo do card */
-    border-radius: 10px; /* Arredondar os cantos */
-    overflow: hidden; /* Garante que o conteúdo não ultrapasse os limites do card */
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
     margin: 10px;
     padding: 15px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px; /* Adiciona uma sombra suave */
-    transition: transform 0.3s, box-shadow 0.3s; /* Transição suave para hover */
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
-
 
 .card:hover {
     transform: translateY(-5px);
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px; /* Aumenta a sombra ao passar o mouse */
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px;
 }
 
 .card p {
     margin: 5px 0;
 }
 
-/* Estilos do Cabeçalho da Senha */
+/* Estilos do cabeçalho da senha */
 #senha {
     display: flex;
     flex-direction: column;
@@ -91,8 +118,8 @@ nav i:hover {
     color: white;
     border-radius: 10px;
     padding: 15px 10px;
-    background-color: #005ae0; /* Cor de fundo do cabeçalho */
-    margin-bottom: 15px; /* Espaçamento inferior */
+    background-color: #005ae0;
+    margin-bottom: 15px;
 }
 
 #tempo {
@@ -106,19 +133,11 @@ h3 {
     color: green;
 }
 
-
-.card {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-
-/* // senha */
 .card span p {
     color: red;
 }
 
-/* Estilos do ID da Senha */
+/* Estilos do ID da senha */
 #idsenha {
     display: flex;
     flex-direction: column;
@@ -129,7 +148,18 @@ h3 {
     font-family: 'Roboto', sans-serif;
 }
 
-/* Estilos dos Botões */
+/* Estilos do welcome-message */
+#welcome-message {
+    font-size: 18px;
+    display: flex;
+    text-align: center;
+    color: white;
+    font-weight: normal;
+    gap: 10px;
+    margin-right: 65%;
+}
+
+/* Estilos dos botões */
 .botoes {
     display: flex;
     flex-direction: column;
@@ -138,7 +168,7 @@ h3 {
     margin: 10px 0;
 }
 
-/* Estilo do Botão de Chamar */
+/* Estilo do botão de chamar */
 .botoes .chamar {
     background-color: #0066ff;
     color: #fff;
@@ -153,12 +183,12 @@ h3 {
     transition: background-color 0.3s;
 }
 
-/* Efeito de Hover para o Botão de Chamar */
+/* Efeito de hover para o botão de chamar */
 .botoes .chamar:hover {
     background-color: #0056d2;
 }
 
-/* Estilo do Botão de Cancelar */
+/* Estilo do botão de cancelar */
 .botoes .cancelar {
     background-color: #ff4949;
     color: #fff;
@@ -173,17 +203,17 @@ h3 {
     transition: background-color 0.3s;
 }
 
-/* Efeito de Hover para o Botão de Cancelar */
+/* Efeito de hover para o botão de cancelar */
 .botoes .cancelar:hover {
     background-color: #cc0000;
 }
 
-/* Estilização do botão */
+/* Estilização do botão de próximo */
 #proximo {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: #0056d2; /* Cor de fundo verde */
+    background-color: #0056d2; /* Cor de fundo azul */
     border: none;
     cursor: pointer;
     display: flex;
@@ -197,7 +227,7 @@ h3 {
 }
 
 #proximo:hover {
-    background-color: #0056d2; /* Cor ao passar o mouse */
+    background-color: #003d99; /* Cor ao passar o mouse */
 }
 
 /* Estilização do ícone dentro do botão */
