--- a/Tela Vendedor/style.css
+++ b/Tela Vendedor/style.css
@@ -24,8 +24,8 @@ header {
 
 header nav {
     justify-content: end;
-    gap: 20px;
     display: flex;
+    gap: 20px;
     margin: 0 15px;
     align-items: center;
 }
@@ -62,6 +62,10 @@ nav button {
     border: none;
     align-items: center;
     justify-content: center;
+}
+
+#usuario {
+    font-size: 30px;
 }
 
 nav i {
@@ -148,15 +152,12 @@ h3 {
     font-family: 'Roboto', sans-serif;
 }
 
-/* Estilos do welcome-message */
 #welcome-message {
     font-size: 18px;
-    display: flex;
-    text-align: center;
     color: white;
     font-weight: normal;
-    gap: 10px;
-    margin-right: 65%;
+    margin-right: auto; /* Empurra os itens para a direita */
+    text-align: left; /* Alinha o texto à esquerda */
 }
 
 /* Estilos dos botões */
