--- a/Chamada/style.css
+++ b/Chamada/style.css
@@ -36,8 +36,12 @@ header {
 }
 
 .senhas h1 {
-    margin-top: 30px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    font-size: 130px;
     height: 100%;
 }
 
@@ -128,12 +132,12 @@ footer {
     display: flex;
     text-transform: uppercase;
     padding-top: 3%;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 800;
     justify-content: center;
     align-items: center;
-    height: 180px;
-    width: 300px;
+    height: 270px;
+    width: 400px;
     margin: 0px 10px;
 }
 
@@ -161,5 +165,5 @@ footer {
 }
 
 .ultimas-chamadas p {
-    font-size: 50px;
+    font-size: 90px;
 }
